<resources>
    <string name="app_name">CarPool</string>
    <string name="title_activity_maps">Map</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Not a member? Register now.</string>
    <string name="hint_name">Full name</string>
    <string name="btn_register">Register</string>
    <string name="btn_link_to_login">Already registered! Login me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_go">START</string>
    <string name="search">search</string>
    <string name="action_settings">setting</string>
    <string name="confirm">CONFIRM</string>
    <string name="destination">Enter destination</string>
    <string name="selection">What is your role today?</string>
    <string name="driver">DRIVER</string>
    <string name="passenger">passenger</string>
    <string name="thank">Thank you</string>
    <string name="checking">Please wait and check your mailbox</string>
    <string name="sending">Please send message to driver</string>
    <string name="message">Email address from driver:</string>
    <string name="location">locate</string>
</resources>
