<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="#fdfcff">

    <TextView
        android:id="@+id/selection"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/selection"
        android:layout_gravity="center_horizontal"
        android:textColor="#ff656f"
        android:textSize="28dp"
        android:textIsSelectable="false"
        android:layout_above="@+id/btnPassenger"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"/>

    <Button
        android:id="@+id/btnDriver"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/driver"
        android:background="#ff656f"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:layout_alignLeft="@+id/selection" android:layout_alignStart="@+id/selection"
        android:layout_alignTop="@+id/btnPassenger"/>

    <Button
        android:id="@+id/btnPassenger"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/passenger"
        android:layout_gravity="right"
        android:background="#ff656f"
        android:textColor="#ffffff"
        android:textSize="20dp" android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/selection" android:layout_alignEnd="@+id/selection"
        android:layout_marginBottom="181dp"/>
</RelativeLayout>